# brane

./: .dockerignore  .editorconfig  .gitignore  .tmuxp.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  Cargo.toml  Dockerfile.api  Dockerfile.clb  Dockerfile.cli  Dockerfile.drv  Dockerfile.ide  Dockerfile.job  Dockerfile.loop  Dockerfile.net  Dockerfile.noop  Dockerfile.plr  Dockerfile.slurm  LICENSE  Makefile  NOTICE  README.md  docker-compose-brn.yml  docker-compose-db.yml  docker-compose-ide.yml  docker-compose-support.yml  docker-compose-svc.yml  docker-compose.yml  rustfmt.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: audit.yml  brane-exec.yml  cd.yml  ci.yml  coverage.yml  release.yml
brane-api/: .gitignore  Cargo.toml  Dockerfile  README.md
brane-api/migrations/2020-01-01-000001_packages/: down.sql  up.sql
brane-api/migrations/2020-01-01-000002_sessions/: up.sql
brane-api/migrations/2020-01-01-000003_invocations/: down.sql  up.sql
brane-api/migrations/2020-01-01-000004_variables/: down.sql  up.sql
brane-api/migrations/2020-05-08-000000_initialize/: up.sql
brane-api/migrations/2020-05-08-000000_packages/: up.sql
brane-api/migrations/2020-05-15-000000_invocations/: down.sql  up.sql
brane-api/src/: callback.rs  health.rs  invocations.rs  main.rs  models.rs  packages.rs  schema.rs  sessions.rs  vault.rs
brane-bvm/: Cargo.toml
brane-bvm/benches/: fibonacci.rs
brane-bvm/examples/: fibonacci.rs  new_machine.rs
brane-bvm/src/: builtins.rs  bytecode.rs  executor.rs  frames.rs  instructions.rs  lib.rs  objects.rs  stack.rs  values.rs  vm.rs
brane-bvm/src/machine/: chunk.rs  frames.rs  objects.rs  stack.rs  vm.rs
brane-cfg/: Cargo.toml
brane-cfg/src/: infrastructure.rs  lib.rs  secrets.rs
brane-clb/: Cargo.toml  build.rs
brane-clb/examples/: client.rs
brane-clb/proto/: callback.proto
brane-clb/src/: callback.rs  interface.rs  lib.rs  main.rs
brane-cli/: Cargo.toml
brane-cli/resources/: compile-service.py
brane-cli/resources/apis/: github.yml
brane-cli/resources/arithmetic/: container.yml
brane-cli/resources/arithmetic-service/: actiongroup.yml  run.js
brane-cli/resources/arithmetic-task/: actiongroup.yml
brane-cli/resources/scripts/: hello-world.bs  readme.bk
brane-cli/resources/workflows/: b64decode.cwl  cwltool.sh  echo-wf.cwl  echo.cwl
brane-cli/src/: build_api.rs  build_cwl.rs  build_dsl.rs  build_ecu.rs  build_oas.rs  docker.rs  lib.rs  main.rs  packages.rs  registry.rs  repl.rs  run.rs  test.rs  utils.rs
brane-cli/src/graphql/: api_schema.json  get_package.graphql  search_packages.graphql  unpublish_package.graphql
brane-drv/: Cargo.toml  build.rs
brane-drv/proto/: driver.proto
brane-drv/src/: docker.rs  executor.rs  handler.rs  lib.rs  main.rs  packages.rs
brane-drv/src/graphql/: get_packages.graphql
brane-dsl/: Cargo.toml
brane-dsl-wip/: Cargo.toml
brane-dsl-wip/src/: lib.rs  main.rs
brane-dsl/resources/: defaults.bk  files.bk  hello-world.bk  if-else.bk  imports.bk  lofar.bk  packages.json  transfer.bk  wait-until.bk  webpage.bk  while-loop.bk
brane-dsl/src/: ast.rs  compiler.rs  configuration.rs  errors.rs  functions.rs  indexes.rs  lib.rs  main.rs  parser.rs  repl.rs  setup.rs  terms.rs
brane-dsl/src/generator/: disassemble.rs  generator.rs  mod.rs
brane-dsl/src/grammer/: bakery.pest
brane-dsl/src/parser/: ast.rs  bakery.rs  bscript.rs  expression.rs  identifier.rs  instance.rs  literal.rs  mod.rs  operator.rs  parser.rs  pattern.rs
brane-dsl/src/scanner/: comments.rs  literal.rs  scanner.rs  tokens.rs
brane-dsl/test/mock-registry/: registry-api.js  responses.json
brane-dsl/tests/: samples.rs
brane-exec/: .gitignore  Cargo.toml  Dockerfile  README.md  resource.yml
brane-exec/src/: delegate.rs  docker.rs  hpc.rs  kubernetes.rs  lib.rs  main.rs  openapi.rs  schedule.rs
brane-exec/tests/: docker.rs  hpc_test.rs
brane-ide/: .gitignore  Makefile  Pipfile  README.md
brane-ide/jupyterlab/: Dockerfile  Pipfile  README.md
brane-ide/registry/: package-lock.json  package.json
brane-init/: Cargo.toml
brane-init/resources/arithmetic/: payload.json  run.sh
brane-init/resources/httpbin/: document.yml  package.yml
brane-init/src/: callback.rs  exec.rs  exec_cwl.rs  exec_ecu.rs  exec_oas.rs  lib.rs  main.rs  relay.rs
brane-init/tests/: exec_oas_tests.rs
brane-job/: Cargo.toml  README.md  infra.yml  secrets.yml
brane-job/examples/: client.rs  runner.rs
brane-job/resources/: arithmetic.yml  noop-app.yml  ping-app.yml  ppsdg.yml
brane-job/src/: clb_heartbeat.rs  clb_lifecycle.rs  cmd_create.rs  interface.rs  lib.rs  main.rs
brane-let/: Cargo.toml
brane-let/resources/: package.yml
brane-let/src/: callback.rs  exec_code.rs  exec_oas.rs  lib.rs  main.rs  redirector.rs
brane-log/: Cargo.toml
brane-log/src/: ingestion.rs  interface.rs  lib.rs  main.rs  schema.rs
brane-loop/: Cargo.toml  Dockerfile
brane-loop/src/: inv_handler.rs  main.rs  models.rs  schema.rs
brane-net/: Cargo.toml
brane-net/examples/: client.rs
brane-net/src/: interface.rs  main.rs
brane-oas/: Cargo.toml
brane-oas/src/: build.rs  execute.rs  lib.rs  resolver.rs
brane-oas/tests/: build_input.rs  build_output.rs  common.rs
brane-oas/tests/resources/: body.yml  input.yml  output.yml  param.yml  resp.yml  servers_1_none.yml  servers_2_global.yml  servers_3_path.yml  servers_4_operation.yml
brane-plr/: Cargo.toml
brane-plr/src/: main.rs
brane-shr/: Cargo.toml
brane-std/: Cargo.toml
brane-sys/: Cargo.toml
brane-vm/: Cargo.toml
brane-vm/src/: async_machine.rs  cursor.rs  environment.rs  lib.rs  machine.rs  sync_machine.rs  vault.rs
docs/: README.md  SUMMARY.md  _config.yml  architecture.md  bakery.md  configuration.md  demonstration.md  index.md  installation.md  overview.md  quality-assurance.md  quickstart.md
specifications/: Cargo.toml
specifications/src/: actiongroup.rs  common.rs  container.rs  groupmeta.rs  instructions.rs  lib.rs  package.rs  status.rs
(+234 files in other folders)
