[workspace]
members = [
    "brane-api",
    "brane-cfg",
    "brane-clb",
    "brane-cli",
    "brane-dsl",
    "brane-exec",
    "brane-init",
    "brane-job",
    "brane-log",
    "brane-let",
    "brane-loop",
    "brane-oas",
    "brane-std",
    "brane-sys",
    "brane-vm",
    "specifications",
]

# Keep it seperate: conflicting dependencies.
exclude = [
    "brane-net"
]
