[workspace]
members = [
    "brane-api",
    "brane-bvm",
    "brane-cfg",
    "brane-clb",
    "brane-cli",
    "brane-drv",
    "brane-dsl",
    "brane-job",
    "brane-let",
    "brane-log",
    "brane-oas",
    "specifications",
]

# Keep it seperate: conflicting dependencies.
exclude = [
    "brane-net"
]
