[package]
name = "brane-api"
version = "0.1.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
actix-files = "0.2"
actix-multipart = "0.2"
actix-rt = "1"
actix-web = "2"
chrono = "0.4"
crc32fast = "1.2"
env_logger = "0.7"
failure = "0.1"
flate2 = "1.0"
futures = "0.3"
log = "0.4"
r2d2 = "0.8"
diesel = { version = "1.4", features = ["r2d2", "postgres", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
rand = "0.7"
rdkafka = { version = "0.23", features = ["cmake-build"] }
redis = { version = "0.17", features = ["r2d2"] }
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
structopt = "0.3"
tar = "0.4"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

