[package]
name = "brane-api"
version = "0.4.1"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = "3.0.0-beta.2"
dotenv = "0.15"
env_logger = "0.9"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
futures = "0.3"
juniper = "0.15"
juniper_warp = "0.7"
log = "0.4"
prost = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
scylla = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specifications = { path = "../specifications" }
tar = "0.4"
tempfile = "3.2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
uuid = "0.8"
warp = "0.3"