[package]
name = "brane-bvm"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
async-recursion = "0.3"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
log = "0.4"
smallvec = "1.6"
specifications = { path = "../specifications" }
tokio = { version = "1.6", features = ["full"] }
firestorm = "0.4"

[dev-dependencies]
criterion = { version = "0.3", features = ["async", "async_futures"] }
brane-dsl = { path = "../brane-dsl" }

[[bench]]
name = "fibonacci"
harness = false
