[package]
name = "brane-clb"
version = "0.4.1"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
clap = "3.0.0-beta.2"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
prost = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
tonic = "0.5"

[build-dependencies]
tonic-build = "0.5"
