[package]
name = "brane-cli"
version = "0.1.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
appdirs = "0.2"
base64 = "0.12"
brane-dsl = { path = "../brane-dsl" }
brane-exec = { path = "../brane-exec" }
brane-sys = { path = "../brane-sys" }
brane-vm = { path = "../brane-vm" }
chrono = "0.4"
console = "0.11"
crc32fast = "1.2"
cwl = { git = "https://github.com/onnovalkering/cwl-rs" }
dialoguer = "0.6"
dotenv = "0.15"
env_logger = "0.7"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
fs_extra = "1.1"
futures = "0.3"
human-panic = "1.0"
hyper = "0.13"
indicatif = "0.15"
lazy_static = "1.4"
linefeed = "0.6"
log = "0.4"
openapiv3 = "0.3"
prettytable-rs = "0.8"
reqwest = {version = "0.10", features = ["json", "stream"] }
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with = "1.3"
specifications = { path = "../specifications" }
structopt = "0.3"
url = "2.1"
tar = "0.4"
tempfile = "3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
uuid = { version = "0.8", features = ["v4"] }
yaml-rust = "0.4"
zmq = { version = "0.9", features = ["vendored"] }
