[package]
name = "brane-cli"
version = "0.4.1"
authors = ["Onno Valkering"]
edition = "2018"

[[bin]]
name = "brane"
path = "src/main.rs"

[dependencies]
anyhow = "1"
appdirs = "0.2"
async-trait = "0.1"
base64 = "0.13"
bollard = "0.11"
brane-bvm = { path = "../brane-bvm" }
brane-drv = { path = "../brane-drv" }
brane-dsl = { path = "../brane-dsl" }
brane-oas = { path = "../brane-oas" }
chrono = "0.4"
console = "0.14"
cwl = { git = "https://github.com/onnovalkering/cwl-rs" }
dialoguer = "0.8"
dotenv = "0.15"
env_logger = "0.9"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
fs_extra = "1.2"
futures = "0.3"
futures-util = "0.3"
git2 = "0.13"
graphql_client = "0.10"
human-panic = "1.0"
hyper = "0.14"
indicatif = "0.16"
lazy_static = "1.4"
log = "0.4"
openapiv3 = "0.5"
prettytable-rs = "0.8"
reqwest = {version = "0.11", features = ["json", "stream", "multipart"] }
rustyline = "8.0"
rustyline-derive = "0.4"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1.9"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
structopt = "0.3"
tar = "0.4"
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.6"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }
