[package]
name = "brane-drv"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
appdirs = "0.2"
async-trait = "0.1"
base64 = "0.12"
brane-bvm = { path = "../brane-bvm" }
brane-dsl = { path = "../brane-dsl" }
brane-job = { path = "../brane-job" }
bytes = "1"
clap = "3.0.0-beta.2"
dashmap = "4.0"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
hyper = "0.13"
lazy_static = "1.4"
log = "0.4"
prost = "0.7"
rand = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
semver = "0.9"
serde = "1"
serde_json = "1"
specifications = { path = "../specifications" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
tokio-stream = "0.1"
tonic = "0.4"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.4"
