[package]
name = "brane-dsl"
version = "0.2.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
appdirs = "0.2"
brane-std = { path = "../brane-std" }
itertools = "0.8"
log = "0.4"
pest = "2.0"
pest_derive = "2.0"
rand = "0.7.2"
regex = "1"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specifications = { path = "../specifications" }

[dev-dependencies]
env_logger = "0.7"
