[package]
name = "brane-dsl"
version = "0.4.1"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
brane-bvm = { path = "../brane-bvm" }
bytes = "1"
itertools = "0.10"
log = "0.4"
nom = "6.1"
nom_locate = "3.0"
rand = "0.8"
regex = "1.5"
semver = "1.0"
serde = "1"
serde_json = "1"
specifications = { path = "../specifications" }
thiserror = "1"
