[package]
name = "brane-exec"
version = "0.1.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.12"
brane-sys = { path = "../brane-sys" }
bollard = "0.7"
bytes = "0.5"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
futures-util = "0.3"
k8s-openapi = { version = "0.7", features = ["v1_15"] }
kube = "0.28"
hyper = "0.13"
lazy_static = "1.4"
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
tempfile = "3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
uuid = { version = "0.4", features = ["v4"] }

[dev-dependencies]
base64 = "0.12"
