[package]
name = "brane-exec"
version = "0.2.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.12"
bollard = "0.7"
brane-sys = { path = "../brane-sys" }
bytes = "0.5"
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
futures-util = "0.3"
grpcio = { version = "0.4", features = ["openssl"] }
hyper = "0.13"
k8s-openapi = { version = "0.7", features = ["v1_15"] }
kube = "0.28"
lazy_static = "1.4"
log = "0.4"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
tempfile = "3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
uuid = { version = "0.4", features = ["v4"] }
xenon-rs = "0.2"

[dev-dependencies]
base64 = "0.12"
