[package]
name = "brane-init"
version = "0.2.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.12"
env_logger = "0.7"
log = "0.4"
openapiv3 = "0.3"
reqwest = { version = "0.10", features = ["json", "native-tls-vendored"] }
semver = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
yaml-rust = "0.4"