[package]
name = "brane-job"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
base64 = "0.13"
bincode = "1.3"
bollard = "0.10"
brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
bytes = "1"
clap = "3.0.0-beta.2"
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3"
k8s-openapi = { version = "0.13", default-features = false, features = ["v1_20"] }
kube = "0.59"
log = "0.4"
maplit = "1.0"
prost = "0.8"
rand = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
time = "0.3"
tokio = { version = "1", features = ["full"] }
xenon-rs = "0.4"

[dev-dependencies]
dashmap = "4.0"
