[package]
name = "brane-let"
version = "0.4.1"
authors = ["Onno Valkering"]
edition = "2018"

[[bin]]
name = "branelet"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.13"
brane-clb = { path = "../brane-clb" }
brane-oas = { path = "../brane-oas" }
clap = "3.0.0-beta.2"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
socksx = { git = "https://github.com/onnovalkering/socksx" }
specifications = { path = "../specifications" }
subprocess = "0.2"
tokio = { version = "1", features = ["full"] }
tonic = "0.5"
yaml-rust = "0.4"