[package]
name = "brane-log"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
async-stream = "0.3"
brane-job = { path = "../brane-job" }
bytes = "1"
cassandra-cpp = "0.16"
clap = "3.0.0-beta.2"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
juniper = "0.15"
juniper_graphql_ws = "0.2"
juniper_warp = { version = "0.6", features = ["subscriptions"] }
log = "0.4"
prost = "0.7"
rdkafka = { version = "0.24", features = ["cmake-build"] }
time = "0.2"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
