[package]
name = "brane-loop"
version = "0.3.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
brane-vm = { path = "../brane-vm" }
brane-sys = { path = "../brane-sys" }
env_logger = "0.7"
failure = "0.1"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
diesel = { version = "1.4", features = ["r2d2", "postgres", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15"
rdkafka = { version = "0.26", features = ["cmake-build"] }
redis = "0.17"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
