[package]
name = "brane-net"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.2"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rdkafka = { version = "0.26", features = ["cmake-build"] }
socksx = "0.1.0"
tokio = { version = "1", features = ["full"] }
