[package]
name = "brane-oas"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
cookie = "0.15"
cookie_store = { version = "0.13", features = ["reqwest_impl"] }
log = "0.4"
maplit = "1"
openapiv3 = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
