[package]
name = "brane-oas"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
backoff = { version = "0.3", features = ["tokio"] }
cookie = "0.15"
cookie_store = "0.15"
log = "0.4"
maplit = "1"
openapiv3 = "0.5"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
reqwest_cookie_store = "0.2"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
