[package]
name = "brane-plr"
version = "0.4.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
brane-cfg = { path = "../brane-cfg" }
brane-job = { path = "../brane-job" }
bytes = "1"
clap = "3.0.0-beta.2"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
hyper = "0.13"
log = "0.4"
prost = "0.7"
rand = "0.8"
rdkafka = { version = "0.26", features = ["cmake-build"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
