[package]
name = "brane-vm"
version = "0.1.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
brane-exec = { path = "../brane-exec" }
failure = "0.1"
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
specifications = { path = "../specifications" }
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
