[package]
name = "brane-vm"
version = "0.1.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
appdirs = "0.2"
brane-exec = { path = "../brane-exec" }
flate2 = "1.0"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
semver = "0.9"
serde = "1.0"
serde_yaml = "0.8"
specifications = { path = "../specifications" }
tar = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-util = "0.3"
reqwest = {version = "0.10", features = ["json", "blocking"] }
