[package]
name = "specifications"
version = "0.3.0"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.3"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
