[package]
name = "specifications"
version = "0.4.1"
authors = ["Onno Valkering"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = "1.9"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }